@@ -1,5 +1,13 @@
 Changes with Apache 2.0.44
 
+  *) Change the CacheRoot processing to check for a required
+     value at config time. This saves a lot of wasted processing
+     if the mod_disk_cache module is loaded but no CacheRoot
+     was provided. This fix also adds code to log an error
+     and avoid useless pallocs and procesing when the computed
+     cache file name cannot be opened. This also updates the
+     docs accordingly.  [Paul J. Reder]
+
   *) Introduce the EnableSendfile directive, allowing users of NFS 
      shares to disable sendfile mechanics when they either fail
      outright or provide intermitantly corrupted data.  PR 
